name:               johnsonwj-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          Site.hs
  other-modules:    Site.Home, Site.Post
  build-depends:    base, hakyll, hakyll-sass
  ghc-options:      -threaded
  default-language: Haskell2010
  default-extensions: OverloadedStrings
